<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.plantshome.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_report"
        android:name="com.example.plantshome.ui.Report.fragment_report"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_report_fragment" />

    <fragment
        android:id="@+id/nav_taskpanel"
        android:name="com.example.plantshome.ui.taskpanel.Fragment_taskpanel"
        android:label="@string/menu_taskpanel"
        tools:layout="@layout/fragment_taskpanel_fragment" />
 <fragment
        android:id="@+id/nav_badge"
        android:name="com.example.plantshome.ui.Badge.Fragment_Badge"
        android:label="@string/menu_badge"
        tools:layout="@layout/fragment__badge_fragment" />
 <fragment
        android:id="@+id/nav_feedback"
        android:name="com.example.plantshome.ui.feedback.Fragment_Feedback"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment__feedback_fragment" />

 <fragment
        android:id="@+id/share"
        android:name="com.example.plantshome.ui.share.Fragment_Share"
        android:label=""
        tools:layout="@layout/fragment__share_fragment" />

    <fragment
        android:id="@+id/btnLogout"
        android:name="com.example.plantshome.ui.Logout.Fragment_Logout"
        android:label=""
        tools:layout="@layout/fragment__logout_fragment" />

    <fragment
        android:id="@+id/rate"
        android:name="com.example.plantshome.ui.rate.Fragment_rate"
        android:label=""
        tools:layout="@layout/fragment_rate_fragment" />
    <fragment
        android:id="@+id/profile"
        android:name="com.example.plantshome.ui.profile.Fragment_Profile"
        android:label=""
        tools:layout="@layout/fragment__profile_fragment" />




</navigation>