<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mybg"
    android:fontFamily="@font/poppinsregular"
    android:orientation="vertical"
    tools:context=".Activity_Signup"

    >


    <ImageButton
        android:id="@+id/backToMain"
        android:layout_width="101dp"
        android:layout_height="51dp"
        android:layout_gravity="center"
        android:background="@drawable/back"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintVertical_bias="0.023" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="64dp"
        android:background="#fff"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="8dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="467dp"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:layout_width="248dp"
                android:layout_height="42dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/create_account"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="@string/name"
                android:hint="@string/name"
                android:inputType="text"
                android:textColor="@color/green" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginVertical="10dp"
                android:autofillHints="@string/email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/green" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginVertical="10dp"
                android:autofillHints="@string/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/green"


                />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginVertical="10dp"
                android:autofillHints="@string/confirm_password"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/green"


                />

            <Button
                android:id="@+id/registerUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/button_rounded"
                android:backgroundTint="@color/green"
                android:elevation="2dp"
                android:onClick="Navigate"
                android:text="Register"
                android:textSize="15sp"
                card_view:backgroundTint="@color/green" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:shadowColor="@color/black"
        android:text="OR SIGN UP WITH"
        android:textColor="@color/green"
        card_view:backgroundTint="#FFFFFF"
        card_view:iconTint="#00FFFFFF"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/cardView"
        card_view:layout_constraintVertical_bias="0.261"
        card_view:strokeColor="@color/black" />

    <ImageView
        android:id="@+id/btnfb"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:src="@drawable/sign_in_icons__2_"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.421"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/button"
        card_view:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/btngo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:src="@drawable/sign_in_icons__1_"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.595"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/button"
        card_view:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progessBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="72dp"

        android:layout_marginRight="72dp"
        android:visibility="gone"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="1.0"
        card_view:layout_constraintStart_toEndOf="@+id/button"
        card_view:layout_constraintTop_toBottomOf="@+id/cardView"
        card_view:layout_constraintVertical_bias="0.261"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>